--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ dist
 
 # TernJS port file
 .tern-port
+/.idea/rodeo-scoring-version-2.iml
+/.idea/vcs.xml
+/.idea/modules.xml
+/.idea/.gitignore
